# py_json_maker

./: README.md  pyproject.toml  requirements.txt
py_json_maker/: access_pdf_file.py  extract_file_contents.py  file_ext.py  json_writer.py  main.py  sentence_tokenizer.py  split_paths.py  text_utils.py
src/: file_ext.py  json_writer.py  main.py  split_paths.py  update_mechanism.py
