[tool.poetry]
name = "py-json-maker"
version = "0.1.0"
description = ""
authors = ["ds asante <73370911+kasante1@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "py_json_maker"}]

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^3.17.0"
colorama = "^0.4.6"
jsonlines = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
